--- a/app/views/blogs/blog_02.html.erb
+++ b/app/views/blogs/blog_02.html.erb
@@ -5,32 +5,142 @@
     <div class="wrap">
       
       <div class="detitle for_blog">
+
       </div>
       
       <div class="blog_wrap clearfix">
         <div class="cnt_wrap clearfix">
-          <div class="inner">
-            <h2>How to sign up for Amazon Prime if you already have an Amazon account already.</h2>
-            <p>If you are not sign in, sign into your account first</p>
-            <p>Click “Try Prime”</p>
-          </div>
           <div class="image_box">
             <img src="">
           </div>
+          <div class="inner">
+            <strong>STEP.1</strong>
+            <h2>How to sign up for Amazon Prime if you already have an Amazon account already.</h2>
+            <p>If you are not sign in, sign into your account first.</p>
+            <p>Click “Try Prime”</p>
+            <!-- <a href="#n"></a> -->
+          </div>
         </div>
 
-        <div class="cnt_wrap">
-          <div class="inner">
-            <h2>How to sign up for Amazon Prime if you already have an Amazon account already.</h2>
-            <p>If you are not sign in, sign into your account first</p>
-            <p>Click “Try Prime”</p>
-          </div>
+        <div class="cnt_wrap clearfix">
           <div class="image_box">
             <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
           </div>
+          <div class="inner">
+            <strong>STEP.2</strong>
+            <p>Click “GET STARTED” button</p>
+          </div>
         </div>
-      </div>
-      
+
+        <div class="cnt_wrap clearfix">
+          <div class="image_box">
+            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+          </div>
+          <div class="inner">
+            <strong>STEP.3</strong>
+            <p>If your credit card and address are registered, you could see this page.</p>
+            <p>If Click “Start your 30-day free trial” then your Prime is started.</p>
+          </div>
+        </div>
+
+        <div class="cnt_wrap clearfix">
+          <div class="image_box">
+            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+          </div>
+          <div class="inner">
+            <strong>STEP.4</strong>
+            <p>If your credit card and address are not registered, you could see this page.</p>
+            <p>Register your credit card and Click “Start your 30-day free trial”</p>
+          </div>
+        </div>
+
+        <div class="cnt_wrap clearfix">
+          <div class="image_box">
+            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+          </div>
+          <div class="inner">
+            <strong>STEP.5</strong>
+            <p>You will receive confirm of Amazon Prime Free Trial” email from Amazon.</p>
+          </div>
+        </div>
+
+        <div class="cnt_wrap clearfix">
+          <div class="image_box">
+            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+          </div>
+          <div class="inner">
+            <strong>STEP.6</strong>
+            <p>After become Prime member you can see that is changed  "Try Prime" to "Prime”</p>
+            <p>Once the trial period is over, your credit card will be charged $119($12.99 per month) for the year of Amazon Prime membership.</p>
+            <p>If you don’t want to be Prime Member anymore, you have to cancel it before the free trial is over.</p>
+          </div>
+        </div>
+
+        <div class="cnt_wrap clearfix">
+          <div class="image_box">
+            <img src="">
+          </div>
+          <div class="inner">
+            <strong>STEP.1</strong>
+            <h2>How to cancel your Amazon Prime membership</h2>
+            <p>If you decide to end your Amazon Prime membership before the free trial is over and you don't want it anymore, you can cancel at any time.</p>
+          </div>
+        </div>
+
+        <div class="cnt_wrap clearfix">
+          <div class="image_box">
+            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+          </div>
+          <div class="inner">
+            <strong>STEP.2</strong>
+            <p>Click “End Trial and Benefits on the left sidebar”</p>
+          </div>
+        </div>
+
+        <div class="cnt_wrap clearfix">
+          <div class="image_box">
+            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+          </div>
+          <div class="inner">
+            <strong>STEP.3</strong>
+            <p>Click “End My Benefits”</p>
+          </div>
+        </div>
+
+        <div class="cnt_wrap clearfix">
+          <div class="image_box">
+            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+          </div>
+          <div class="inner">
+            <strong>STEP.4</strong>
+            <p>Click “Continue to Cancel”</p>
+          </div>
+        </div>
+
+        <div class="cnt_wrap clearfix">
+          <div class="image_box">
+            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+          </div>
+          <div class="inner">
+            <strong>STEP.5</strong>
+            <p>Click “Cancel membership”</p>
+          </div>
+        </div>
+
+        <div class="cnt_wrap clearfix">
+          <div class="image_box">
+            <img src="https://i.pinimg.com/564x/55/97/59/5597591d83725207abc6b92f12fb9659.jpg">
+          </div>
+          <div class="inner">
+            <strong>STEP.6</strong>
+            <p>If you see this page, your Free Prime trial is canceled but it is valid for 30-day</p>
+            <p>You can upgrade your account to Amazon Prime membership in the future anytime if you change your mind.</p>
+
+          </div>
+        </div>
+
+
+      </div><!--./blog_wrap-->
     </div><!--./wrap-->
   </div><!--./cu_wrap-->
 </div><!--./layout-->
