--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -57,7 +57,7 @@
   <div class="inner">
     <span class="regular"><em>Coupon</em></span>
     <h3><a target="_blank" href="https://amzn.to/2Log0gl">Up to 50% off Electronics Clippable Coupons</a></h3>
-    <p></p>
+    <p>Click here to scope out hundreds of electrifying coupons and discounts on everything from Amazon devices, cell phones & accessories, power bank, GoPros, and smart watches to computers, headphones, and speakers, and more!</p>
     <span>Expiration: On going</span>
   </div> 
   <div class="deal_btn">
@@ -79,23 +79,6 @@
     </div> 
     <div class="deal_btn">
       <a target="_blank" href="https://amzn.to/2DyoCdS">Shop Now</a>
-    </div>
-</div>
-
- <div class="card clearfix" data-tags="Sales">
-    <div class="info_box">
-      <a target="_blank" href="https://amzn.to/2GxfR4C">
-        <p><span>20%</span><br /><em>OFF</em></p>
-      </a>
-    </div>
-    <div class="inner">
-      <span class="regular"><em>Sales</em></span>
-      <h3><a target="_blank" href="https://amzn.to/2GxfR4C">Save 20% on AmazonBasics Computer and Wireless Accessories</a></h3>
-      <p></p>
-      <span>Expiration: On going</span>
-    </div> 
-    <div class="deal_btn">
-      <a target="_blank" href="https://amzn.to/2GxfR4C">Shop Now</a>
     </div>
 </div>
 
@@ -150,7 +133,7 @@
     </div>
 </div>
 
-<div class="card clearfix" data-tags="Sales">
+<!-- <div class="card clearfix" data-tags="Sales">
     <div class="info_box">
       <a target="_blank" href="https://amzn.to/2O2aXjc">
         <p><span>30%</span><br /><em>OFF</em></p>
@@ -165,7 +148,7 @@
     <div class="deal_btn">
       <a target="_blank" href="https://amzn.to/2O2aXjc">Shop Now</a>
     </div>
-</div>
+</div> -->
 
 <!-- <div class="card clearfix" data-tags="Sales">
   <div class="info_box">
