--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -17,6 +17,186 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="15" data-price="299.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GWtMRQ"><img src="https://m.media-amazon.com/images/I/61fpUMrAWUL._SR400,400_.jpg" alt="Bluetooth Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GWtMRQ">HiFi Home Party Bluetooth Speaker with RGB Stage Lights,Stereo Loud Sound,Enhanced Bass</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $299.00</strong> using code:153PMPN9</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GWtMRQ">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LnqMTT"><img src="https://m.media-amazon.com/images/I/51giG1APWDL._SR400,400_.jpg" alt="Bluetooth Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LnqMTT">Bluetooth Headphones, Ourlife Wireless Headphones Sport w/Mic IPX5 Waterproof HD Stereo Sweatproof Earbuds </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $15.99</strong> using code:50KIJPU3</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LnqMTT">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H6GxL3"><img src="https://m.media-amazon.com/images/I/41mYcjH67YL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H6GxL3">XINBAOHONG Wireless Mini Sports Earphones in Ear Headset Built-in Microphone and Noise Canceling Sweat Proof Earbuds </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $39.99</strong> using code:60WZKM9B</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2H6GxL3">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H46c6Z"><img src="https://m.media-amazon.com/images/I/61eq6IhddhL._SR400,400_.jpg" alt="True Wireless Earbuds Bluetooth" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H46c6Z">True Wireless Earbuds Bluetooth 5.0 DULLA Sweatproof TWS Deep Bass Earphones Noise Cancelling Isolating Headsets </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>45% off at $39.99</strong> using code:45E8HTFG</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2H46c6Z">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="28.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2vFJX0F"><img src="https://m.media-amazon.com/images/I/71orPxVeQxL._SR400,400_.jpg" alt="Car Tweeter Speakers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2vFJX0F">Silk Dome Car Tweeter Speakers, 4 Ohm 50W Audio Tweeters Crossover, Flush Surface Angle Mounting</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $28.99</strong> using code:40SKYSTH</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2vFJX0F">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ViQtcQ"><img src="https://m.media-amazon.com/images/I/61ylRkbseZL._SR400,400_.jpg" alt="USB C Hub" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ViQtcQ">USB C Hub, Mcscants 8 in 1 Multi Port Type C Adapter with Ethernet Port, 4K HDMI Output</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $49.99</strong> using code:60Z5YJZH</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ViQtcQ">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2vBZb6D"><img src="https://m.media-amazon.com/images/I/61CcyoYo4-L._SR400,400_.jpg" alt="Portable Bluetooth Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2vBZb6D">ZoeeTree S8 Portable Bluetooth Speaker, Bluetooth 5.0 Wireless Stereo Speaker</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $29.99</strong> using code:50AQSW9U</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2vBZb6D">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="69.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wy8qk4"><img src="https://m.media-amazon.com/images/I/71mdcKHgqTL._SR400,400_.jpg" alt="Retro Bluetooth Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wy8qk4">Divoom Tivoo Retro Bluetooth Speaker - Pixel Art DIY Box, RGB Programmable 16X16 LED</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $69.90</strong> using code:10LGTLU3</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wy8qk4">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="22" data-price="12.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PK0aev"><img src="https://m.media-amazon.com/images/I/91DJddO74HL._SR400,400_.jpg" alt="Wallet Phone Case" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>22% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2PK0aev">HOOMIL Case Compatible with Samsung Galaxy S8, Premium Leather Flip Wallet Phone Case for Samsung Galaxy S8 Cover </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>22% off at $12.99</strong> using code:22BJKIYZ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2PK0aev">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="25.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H2nfFn"><img src="https://m.media-amazon.com/images/I/61V5v2lY-kL._SR400,400_.jpg" alt="PS3 Controller Wireless" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H2nfFn">CHENGDAO PS3 Controller Wireless 2 Pack Double Shock Gamepad for Playstation 3 Remote</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $25.49</strong> using code:promo_code</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2H2nfFn">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="25" data-price="229.95">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2LmYEQT"><img src="https://m.media-amazon.com/images/I/71yd91Pjj2L._SR400,400_.jpg" alt="" /></a>
