--- a/app/views/deals/promotions.html.erb
+++ b/app/views/deals/promotions.html.erb
@@ -17,6 +17,27 @@
         <div class="rt_cnt">
           <h2>Promotions on Amazon</h2>
           <div class="box_wrap">
+
+            <!-- <div class="box">
+              <a target="_blank" href="url_link">
+              <img src="image_link" alt="" />
+              </a>
+            </div> -->
+             <div class="box">
+              <a target="_blank" href="https://amzn.to/2ZX6jc0">
+              <img src="https://images-na.ssl-images-amazon.com/images/G/01/omaha/images/merch/2017/Libraries/Associates/300x250_Associate_FCS-2925_Fresh._V506599205_.jpg" alt="" />
+              </a>
+            </div>
+             <div class="box">
+              <a target="_blank" href="https://amzn.to/2JhHP76">
+              <img src="https://images-na.ssl-images-amazon.com/images/G/01/pantry/associates/june18/pub/pantry-bounty-300x250.jpg" alt="" />
+              </a>
+            </div>
+             <div class="box">
+              <a target="_blank" href="https://amzn.to/2LpzwJm">
+              <img src="https://images-na.ssl-images-amazon.com/images/G/01/textbooks/assoc/3textbooks_textbooks-associates-070214_assoc_300x250.png" alt="" />
+              </a>
+            </div>
             <div class="box">
               <a target="_blank" href="https://amzn.to/2EgkS1o">
               <img src="https://images-na.ssl-images-amazon.com/images/G/01/US-hq/2018/img/Prime/XCM_Manual_1132576_Evergreen_Associates_banners_Q32018_300x250_Prime_300X250_1534401353_jpg.jpg" alt="amazon prime - start your 30-day free trial" />
@@ -62,33 +83,7 @@
               <img src="https://images-na.ssl-images-amazon.com/images/G/01/Audible/en_US/images/creative/amazon/A4_562_GiftingCenter_Associate_320x250.gif" alt="amazon audible" />
               </a>
             </div>
-             <div class="box">
-              <a target="_blank" href="url_link">
-              <img src="image_link" alt="" />
-              </a>
-            </div>
-             <div class="box">
-              <a target="_blank" href="url_link">
-              <img src="image_link" alt="" />
-              </a>
-            </div>
-             <div class="box">
-              <a target="_blank" href="url_link">
-              <img src="image_link" alt="" />
-              </a>
-            </div>
-             <div class="box">
-              <a target="_blank" href="url_link">
-              <img src="image_link" alt="" />
-              </a>
-            </div>
-             <div class="box">
-              <a target="_blank" href="url_link">
-              <img src="image_link" alt="" />
-              </a>
-            </div>
-            
-            
+      
           </div>
         </div>
       </div><!--./wrap-->
