--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Oh,igottabuythis</title>
+    <title>Oh,igottabuythis - Coolest Gadgets, Amazon Coupons&Promo Codes</title>
     <meta name="description" content="oh,igottabuythis is here to discover awesome gadgets. Find thousands of Amazon best deals, coupon codes, promotions you love.">
     <meta charset="utf-8"/>
     <meta content="IE=edge, chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="google-site-verification" content="vQF6LefdIqJcWCJt-tk8Ole3g9hmqqRX9woRg5L4ADs" />
+    <meta name="google-site-verification" content="HxgA-SqPz9ZGYg0QycZcRbkmxo3MQkcVjtJaZskM-u0" />
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">  
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <%= csrf_meta_tags %>
