--- a/app/views/recommends/index.html.erb
+++ b/app/views/recommends/index.html.erb
@@ -6,7 +6,7 @@
     
       <div class="cu_sub_nav">
         <ul class="clearfix">
-          <li><a class="active" href="/featured/index">Featured</a></li>
+          <li><a class="active" href="/recommends">Featured</a></li>
           <!--<li><a href="/guides/index">Gift Guide</a></li>-->
           <!-- <li><a href="/editors/index">Editor's Pick</a></li> -->
           <li><a href="/blogs/index">Blog</a></li>
