--- a/app/views/promocodes_days/_day_01.html.erb
+++ b/app/views/promocodes_days/_day_01.html.erb
@@ -300,7 +300,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="product_link">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2LqpmIm">Use Code</a>
   </div>
 </div>
 
