--- a/app/views/deals/promotions.html.erb
+++ b/app/views/deals/promotions.html.erb
@@ -25,17 +25,17 @@
             </div> -->
              <div class="box">
               <a target="_blank" href="https://amzn.to/2ZX6jc0">
-              <img src="https://images-na.ssl-images-amazon.com/images/G/01/omaha/images/merch/2017/Libraries/Associates/300x250_Associate_FCS-2925_Fresh._V506599205_.jpg" alt="" />
+              <img src="https://images-na.ssl-images-amazon.com/images/G/01/omaha/images/merch/2017/Libraries/Associates/300x250_Associate_FCS-2925_Fresh._V506599205_.jpg" alt="Amazon Fresh" />
               </a>
             </div>
              <div class="box">
               <a target="_blank" href="https://amzn.to/2JhHP76">
-              <img src="https://images-na.ssl-images-amazon.com/images/G/01/pantry/associates/june18/pub/pantry-bounty-300x250.jpg" alt="" />
+              <img src="https://images-na.ssl-images-amazon.com/images/G/01/pantry/associates/june18/pub/pantry-bounty-300x250.jpg" alt="Prime Pantry" />
               </a>
             </div>
              <div class="box">
               <a target="_blank" href="https://amzn.to/2LpzwJm">
-              <img src="https://images-na.ssl-images-amazon.com/images/G/01/textbooks/assoc/3textbooks_textbooks-associates-070214_assoc_300x250.png" alt="" />
+              <img src="https://images-na.ssl-images-amazon.com/images/G/01/textbooks/assoc/3textbooks_textbooks-associates-070214_assoc_300x250.png" alt="Amazon Used Textbooks" />
               </a>
             </div>
             <div class="box">
