--- a/app/views/home/index_02.html.erb
+++ b/app/views/home/index_02.html.erb
@@ -12,22 +12,20 @@
       </div>        
     </div>
 
-
-
     <div class="gadgets">
       <div class="wrap">
         <div class="card_wrap clearfix">
           <% @gadgets.each do |gadget| %>
             <div class="card with-photo">
               <div class="card-header">
-               <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt=""></a>
+               <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt="<%= gadget.gg_title %>"></a>
               </div>
               
               <section class="card-body">
                 
                 <% if gadget.gg_youtube01.present? %>
                   <div class="js-overlay-start start" data-url= "<%= gadget.gg_youtube01 %>">
-                    <button><img src="<%=asset_path 'youtube_02.png' %>" alt="" /></button>
+                    <button><img src="<%=asset_path 'youtube_02.png' %>" alt="Play Youtube" /></button>
                   </div>
                 <% end %>
 
