--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -8,6 +8,7 @@
     <span class="regular"><em>Category</em></span>
     <h3><a target="_blank" href="Site_Link">Main_title</a></h3>
     <p>Sub_title</p>
+    <span>Expiration: On going</span>
   </div> 
   <div class="deal_btn">
     <a target="_blank" href="Site_Link">Shop Now</a>
@@ -47,6 +48,25 @@
     <a target="_blank" href="https://amzn.to/2GDUFvg">Shop Now</a>
   </div>
 </div>
+
+<div class="card clearfix" data-tags="Coupons">
+  <div class="info_box">
+    <a target="_blank" href="https://amzn.to/2H452rS">
+      <p>$25<br /><em>OFF</em></p>
+    </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>Coupon</em> Code: FRESH25</span>
+    <h3><a target="_blank" href="https://amzn.to/2H452rS">Take $25 off your first AmazonFresh order of $100 or more.</a></h3>
+    <p>This is a limited time offer. Offer good while supplies last. Offer is restricted to select AmazonFresh customers who are recipients of this offer. Offer applies to first-time customer orders. Offer is valid on orders of $100 or more.</p>
+
+    <span>Expiration: On going</span>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2H452rS">Shop Now</a>
+  </div>
+</div>
+
 
 <div class="card clearfix" data-tags="Coupons">
   <div class="info_box">
@@ -203,23 +223,6 @@
   </div>
 </div>
 
-<div class="card clearfix" data-tags="Sales">
-  <div class="info_box">
-    <a target="_blank" href="https://amzn.to/2CsbFSb">
-      <p><span>70%</span><br /><em>OFF</em></p>
-    </a>
-  </div>
-  <div class="inner">
-    <span class="regular"><em>Sales</em></span>
-    <h3><a target="_blank" href="https://amzn.to/2CsbFSb">70% off ZORJAR Women Fashion</a></h3>
-    <p>Wool Winter Scarf Women Shawl-ZORJAR Pure Wool Stripe Loop Yarn Soft Scarf Fashion Scarves Long Scarves For Womens,29"x78"Wool Winter Scarf Women Shawl-ZORJAR Pure Wool Stripe Loop Yarn Soft Scarf Fashion Scarves Long Sc…</p>
-    <span>Expiration: Mar 31, 2019 at 11:59 PM PDT</span>
-  </div> 
-  <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2CsbFSb">Shop Now</a>
-  </div>
-</div>
-
  <div class="card clearfix" data-tags="Sales">
   <div class="info_box">
     <a target="_blank" href="https://amzn.to/2XH2c1C">
@@ -238,6 +241,127 @@
 </div>
 
 <!--------------------------------------------------- Deals --------------------------------------------------->
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2E2TsM7"><img src="https://m.media-amazon.com/images/I/81D46VNLb9L._AC_UL436_.jpg" alt="AMD Graphics Card" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2E2TsM7">XFX Radeon RX 580 GTS XXX Edition 1386MHz OC+, 8GB GDDR5, VR Ready, Dual BIOS, 3xDP HDMI DVI, AMD Graphics Card</a></p>
+    <span class="dis_price">$184.99</span><span class="org_price">$379.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2E2TsM7">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2vGttWc"><img src="https://m.media-amazon.com/images/I/51nnAEaNs2L._AC_UL436_.jpg" alt="Wifi Signal Booster" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>12% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2vGttWc">TP-Link | AC750 Wifi Extender | Up to 750Mbps | Dual Band Range Extender, Repeater, Wifi Signal Booster</a></p>
+    <span class="dis_price">$29.99</span><span class="org_price">$33.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2vGttWc">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2LpNdYL"><img src="https://m.media-amazon.com/images/I/61964ezLCKL._AC_UL436_.jpg" alt="Samsung EP-NG930TBUGUS Qi Certified Fast Charge Wireless Charging Stand W/ AFC Wall Charger" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LpNdYL">Samsung EP-NG930TBUGUS Qi Certified Fast Charge Wireless Charging Stand W/ AFC Wall Charger - Black</a></p>
+    <span class="dis_price">$28.00</span><span class="org_price">$59.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2LpNdYL">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2PNG3fj"><img src="https://m.media-amazon.com/images/I/71qXNGiHCUL._AC_UL436_.jpg" alt="Fujifilm INSTAX Share SP-2 Mobile Printer" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2PNG3fj">Fujifilm INSTAX Share SP-2 Mobile Printer (Gold)</a></p>
+    <span class="dis_price">$79.99</span><span class="org_price">$199.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2PNG3fj">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2YbkIPX"><img src="https://m.media-amazon.com/images/I/81qxHP+ZFuL._AC_UL436_.jpg" alt="Seagate Backup Plus Portable External Hard Drive 4TB USB 3.0" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YbkIPX">Seagate Backup Plus Portable External Hard Drive 4TB USB 3.0, Silver + 2mo Adobe CC Photography</a></p>
+    <span class="dis_price">$89.99</span><span class="org_price">$99.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2YbkIPX">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2vEvKRw"><img src="https://m.media-amazon.com/images/I/61U7T1koQqL._AC_UL436_.jpg" alt="SanDisk SSD PLUS 1TB Internal SSD" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>14% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2vEvKRw">SanDisk SSD PLUS 1TB Internal SSD - SATA III 6 Gb/s, 2.5"/7mm - SDSSDA-1T00-G26</a></p>
+    <span class="dis_price">$107.99</span><span class="org_price">$124.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2vEvKRw">Shop Now</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2VLzlMm"><img src="https://m.media-amazon.com/images/I/81G0mAwT0DL._AC_UL436_.jpg" alt="SanDisk 2TB Extreme Portable External SSD" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VLzlMm">SanDisk 2TB Extreme Portable External SSD - USB-C, USB 3.1 - SDSSDE60-2T00-G25</a></p>
+    <span class="dis_price">$336.12</span><span class="org_price">$699.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2VLzlMm">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2VinQMY"><img src="https://m.media-amazon.com/images/I/6149LTqv1AL._AC_UL436_.jpg" alt="SanDisk Ultra Flair 128GB USB 3.0 Flash Drive" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>19% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VinQMY">SanDisk Ultra Flair 128GB USB 3.0 Flash Drive - SDCZ73-128G-G46</a></p>
+    <span class="dis_price">$19.99</span><span class="org_price">$24.76</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2VinQMY">Shop Now</a>
+  </div>
+</div>
 
  <div class="card clearfix" data-tags="Deals">
   <div class="img_box">
