--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -17,6 +17,168 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="39" data-price="23.08">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ls0P5O"><img src="https://images-na.ssl-images-amazon.com/images/I/61fAUjYYD8L._SX522_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>39% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ls0P5O">Naipo Handheld Percussion Massager Electric Back Massage</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>39% off at $23.08</strong> using code:RZO2AM7S</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ls0P5O">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Vk9JXi"><img src="https://m.media-amazon.com/images/I/61SpP6MH7LL._SR400,400_.jpg" alt="Stainless Steel Digital Vernier Caliper" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Vk9JXi">Stainless Steel Digital Vernier Caliper,Electronic Ruler Measuring Tool 0-6 Inch/150 mm,Inch/Metric Conversion</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $19.99</strong> using code:504GQEAG</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Vk9JXi">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LAbPya"><img src="https://m.media-amazon.com/images/I/61lnB-OgyyL._SR400,400_.jpg" alt="TENMOS X96 Wireless Rechargeable Gaming Mouse" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LAbPya">TENMOS X96 Wireless Rechargeable Gaming Mouse USB Optical LED Silent Computer Mouse Compatible</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $14.99</strong> using code:507EXF1A</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LAbPya">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="23.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2vHas60"><img src="https://m.media-amazon.com/images/I/61l28FcYb6L._SR400,400_.jpg" alt="Hiking Travel Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2vHas60">Recsolil Hiking Travel Backpack Durable Nylon 40L Outdoor Sports Travel Mountaineering Daypack </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $23.79</strong> using code:201DW4MK</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2vHas60">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="33.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PQTvyV"><img src="https://m.media-amazon.com/images/I/61ik7JDhcTL._SR400,400_.jpg" alt="Laptop Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2PQTvyV">Laptop Backpack, Travel Waterproof Computer Bag for Women Men, Anti-theft High School College Bookbag, Business Fashion Backpacks</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $33.99</strong> using code:60J5GC8P</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2PQTvyV">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="25.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Vje2lV"><img src="https://m.media-amazon.com/images/I/71teNf3qyKL._SR400,400_.jpg" alt="Coffee Grinder" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Vje2lV">Coffee Grinder - Taucken Ultimate Electric Coffee Grinder, Coffee Bean Grinder Stainless Steel Blade Coffee Grinding Coffee Beans</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $25.99</strong> using code:50W48CSO</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Vje2lV">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="32.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LrZw6U"><img src="https://m.media-amazon.com/images/I/71t-GoyLvtL._SR400,400_.jpg" alt="Electric Razor Rotary Shaver" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LrZw6U">RENPHO Electric Razor Rotary Shaver for Men, 2 in 1 Men's Electric Shaver Wet Dry Cordless Beard Trimmer Sideburn Trimmer USB Rechargeable Waterproof </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $32.99</strong> using code:50HV74KF</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LrZw6U">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ltkims"><img src="https://m.media-amazon.com/images/I/61lfFb1FhgL._SR400,400_.jpg" alt="QQPETS Dog Water Bottle for Walking" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ltkims">QQPETS Dog Water Bottle for Walking, Dispenser Pet Portable Dogs Cats 12OZ Travel Drink Bottle Bowls BPA Free.</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $9.99</strong> using code:15ATGOGG</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ltkims">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="37.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Lm7pKW"><img src="https://m.media-amazon.com/images/I/61GvFa4XfCL._SR400,400_.jpg" alt="SUNROLAN Casual Women's Suede" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Lm7pKW">SUNROLAN Casual Women's Suede Leather Driving Moccasins Slip-On Penny Loafers Boat Shoes Flats</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $37.99</strong> using code:501QCRVN</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Lm7pKW">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="20" data-price="17.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Jjjzl5"><img src="https://m.media-amazon.com/images/I/515hFjd8tjL._SR400,400_.jpg" alt="USB Microphone" /></a>
